layout atualizado e inicio js

--- a/index.html
+++ b/index.html
@@ -48,23 +48,23 @@
                 <img src="img/logo 1.png"/>
             </div>
             <div class="icon">
-                <img src="img/people 1.png"/>
+                <img src="img/people 1.png" onclick="abaIcon()"/>
             </div>
         </header>
         <div class="text-container">
-            <div class="text"></div>
+            
         </div>
         <footer>
             <div class="type">
-                <input type="text" placeholder="Escreva aqui..." />
+                <input type="text" placeholder="Escreva aqui..." class="texttype" />
             </div>
             <div class="send">
-                <img src="img/Vector.png"/>
+                <img src="img/Vector.png" onclick="enviarMensagens()"/>
             </div>
         </footer>
     </div>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
