--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
             <div class="input-entrada">
                 <input type="text" placeholder="Digite seu nome" class="user"/>
             </div>
-            <div class="entrar" onclick="entrar()">
-                <p>Entrar</p>
+            <div class="loader hidden">
+                <img src="img/load.jpg"/>
+                <p>Entrando...</p>
+            </div>
+            <div class="entrar">
+                <p id="entrarNoChat" onclick="entrar()">Entrar</p>
             </div>
         </div>
         <header class="hidden">
@@ -26,7 +30,7 @@
                 <img src="img/logo 1.png"/>
             </div>
             <div class="icon">
-                <img src="img/people 1.png" onclick="abaIcon()"/>
+                <img src="img/people 1.png"/>
             </div>
         </header>
         <div class="text-container hidden">
@@ -37,7 +41,7 @@
                 <input type="text" placeholder="Escreva aqui..." class="texttype" />
             </div>
             <div class="send">
-                <img src="img/Vector.png" onclick="enviarMensagens()"/>
+                <img src="img/Vector.png" id="enviodeMensagem" onclick="enviarMensagens()"/>
             </div>
         </footer>
     </div>
